--- a/src/styles/reduction.scss
+++ b/src/styles/reduction.scss
@@ -18,6 +18,8 @@
 @import "components/page";
 @import "components/widget";
 @import "components/search-input";
+@import "components/editorStyles";
+@import "components/customInput";
 
 // themes
 @import "themes/colors";
