--- a/src/styles/components/_page.scss
+++ b/src/styles/components/_page.scss
@@ -38,12 +38,33 @@
   }
 }
 
+.cm-page-loader {
+  display: block;
+  position: fixed;
+  z-index: 99999;
+  background-color: rgba(34, 34, 34, 0.88);
+  left: 0;
+  bottom: 0;
+  right: 0;
+  top: 0;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+}
+
 .cr-page-spinner {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.cm-main-loader {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100px;
+  height: 100px;
 }
 
 .cm-inbox-page {
