--- a/src/styles/components/_editorStyles.scss
+++ b/src/styles/components/_editorStyles.scss
@@ -7,6 +7,7 @@
     margin-bottom: 2em;
     box-shadow: inset 0px 1px 8px -3px #ABABAB;
     background: #fefefe;
+    height: 50vh;
 }
 
 .editor :global(.public-DraftEditor-content) {
@@ -31,4 +32,8 @@
 .headlineButton:hover,
 .headlineButton:focus {
     background: #f3f3f3;
+}
+
+.editor > .DraftEditor-root {
+    height: 80%;
 }
