--- a/src/styles/components/_page.scss
+++ b/src/styles/components/_page.scss
@@ -70,3 +70,14 @@
 .cm-inbox-page {
   padding: 0!important;
 }
+
+.cm-span-link {
+  cursor:pointer;
+  color:blue;
+  text-decoration:underline;
+}
+
+.cm-span-link:hover {
+  text-decoration:none;
+  text-shadow: 1px 1px 1px #555;
+}
